tests/NormalTests/paczka1/small_fuzzy/68261155.err
Error in line 1: nYa7ShWz1T S684 55,7
Error in line 6: nYa7ShWz1T S51 41,7
Error in line 16: nYa7ShWz1T S366 0,14
